# askelira

./: .autonomous-config.json  .dockerignore  .env.example  .eslintrc.json  .gitattributes  .gitignore  .npmignore  AGENTS.md  AGENT_IMPLEMENTATION_COMPLETE.md  ARCHITECTURE_V2.md  ARCHITECTURE_VISION.md  ASKELIRA_CLI_GUIDE.md  ASKELIRA_EXPLANATION_FOR_CLAUDE.md  AUTONOMOUS_OPERATIONS_PLAN.md  BUILDING_LOOP_FIX.md  BUILDING_LOOP_FIX_ITERATION2.md  BUILDING_VISUALIZATION.md  BUILDING_VIZ_FILES.txt  BUILD_FEATURE_FIX_REPORT.md  BUILD_FIX_COMPLETE.md  BUILD_INSTRUCTIONS.md  BUILD_PLAN.json  BUILD_STATUS.md  CHANGELOG.md  CLI_IMPROVEMENTS_SUMMARY.md  CLI_RESEARCH_REPORT.md  CLI_TUI_GUIDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONVERSATIONAL_TUI_UPDATE.md  DASHBOARD_CLAUDE_CODE_PROMPT.md  DEPLOYMENT_READY.md  Dockerfile  EXECUTE_FEATURE.md  FINAL_REPORT.md  FIXES_SUMMARY.md  GITHUB_RELEASE_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MIROFISH_STATUS.md  (+53 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
Agents/: Alba.md  David.md  Elira.md  Steven.md  Vex.md  __init__.py  alba.py  david.py  elira.py  steven.py  vex.py
api/: dashboard_data.py
app/: error.tsx  global-error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
askelira/: __init__.py  orchestrator.py
cli/: .npmignore  LICENSE  README.md  banner-option1.txt  banner-option2.txt  banner-option3.txt  package.json  preview-banners.sh  tsconfig.json
components/: AgentNode.tsx  AgentTicker.tsx  AnimatedBuilding3D.tsx  AutonomousToggle.tsx  AutoresearchToggle.tsx  BuildButton.tsx  (+26 more)
(+337 files in other folders)
