[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "askelira"
version = "0.1.0"
description = "Generic multi-agent orchestration framework with swarm intelligence validation"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["ai", "agents", "orchestration", "mirofish", "multi-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "anthropic>=0.18.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
memory = ["pinecone-client>=3.0.0"]
dev = ["pytest>=7.0", "black", "ruff"]

[project.urls]
Homepage = "https://github.com/jellyforex/askelira"
"Full Trader Implementation" = "https://github.com/jellyforex/askeliratrader"
"Full Marketing Implementation" = "https://github.com/jellyforex/askeliramarketing"

[tool.setuptools.packages.find]
where = ["."]
include = ["askelira*"]
